	calls `twittering-oauth-url-encode'.
	(twittering-url-reserved-p): removed.
	* test/test-twittering-mode.el: add new test `test-oauth'.
	* emacs21/hex-util.el: imported from Emacs22.
	* emacs21/sha1.el: imported from Emacs22.

	* twittering-mode.el (twittering-oauth-get-access-token): fix the
	guide string of authorization via OAuth.

2010-05-20  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: The configuration of a proxy is referred via
	the function `twittering-proxy-info'.
	(twittering-proxy-info): return all configuration of the proxy for
	the scheme.

	* twittering-mode.el: Give priority to the variable
	`twittering-proxy-*' over `twittering-http-proxy-*' and
	`twittering-https-proxy-*'.
	(twittering-proxy-server): defined as a variable.
	(twittering-proxy-port): likewise.
	(twittering-proxy-keep-alive): likewise.
	(twittering-proxy-user): likewise.
	(twittering-proxy-password): likewise.
	(twittering-normalize-proxy-vars): normalize
	`twittering-proxy-port'.
	(twittering-proxy-info): return configuration generated from
	`twittering-proxy-*' regardless of the scheme (HTTP or HTTPS) if
	`twittering-proxy-server' and  `twittering-proxy-port' are
	non-nil.

2010-05-17  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-start-http-session-curl): fix
	extraction of the scheme from the variable `request'.

	* twittering-mode.el: Use a relative path to specify the temporary
	cert file for `curl' to ignore the difference of path
	representation between Windows and Cygwin.
	(twittering-start-http-session-curl): change directory before
	invoking `curl' and specify the temporary cert file with relative
	path.

2010-05-15  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Add copyright of the ACTIVE/INACTIVE
	indicators derived from Wanderlust.
	(twittering-active-indicator-image): add the copyright as a
	comment.
	(twittering-inactive-indicator-image): likewise.
