@@ -85,6 +85,8 @@
 	* twittering-mode.el (twittering-oauth-get-access-token): fix the
 	guide string of authorization via OAuth.
 
+	* twittering-mode.el (twittering-hmac-sha1): fix indentation.
+
 2010-05-20  Tadashi MATSUO  <tad@mymail.twin.jp>
 
 	* twittering-mode.el: The configuration of a proxy is referred via
